--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <a href="https://github.com/KennyChhoeun" target="_blank" class="social__link click">
             <i class="fab fa-github"></i>
           </a>
-          <a href="./assets/Kenny Chhoeun Resume.pdf" target="_blank" class="social__link click">
+          <a href="./assets/Kenny_Chhoeun_Resume.pdf" target="_blank" class="social__link click">
             <i class="fas fa-file-pdf"></i>
           </a>
         </div>
